--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.3 
	- Fixed some minor catalog cleaning issues that could arrise due
		to the order of the clean functions
	- Added missing functions to the HttpQ controller, should now have
		all capabilities that MPD has. 
	- Fixed minor ajax issue with localplay buttons
	- Fixed issue with Add to Catalogs always searching for all
		album art making it really slow
	- Fixed typo in session management that prevented setting of
		secure_cookie option (used default value)
	- Added ability to e-mail flagged/disabled reports in mail 
		functions (Thx PB1DFT)
	- Fixed flagging not correctly tracking user on flag creation
	- Added select boxes to Admin Flag pages to allow rejection or
		approval of all songs at once
	- Fixed an XMLRPC catalog issues created when I moved comments
	- Fixed an issue with localplay controls showing up even if it
		was disabled
	- Fixed Album of Moment's title tag and prevented it from showing
		albums without art (Thx Spocky)
	- Fixed a play issue on democratic play created when I added
		the menu
  	- Fixed batch page to correctly show access denied rather then
		redirecting on error
	- Fixed Genre actions to actually work
	- Added http://www.famfamfam.com icons to browse functions
  	- Fixed Flash Player now playing issue
  	- Fixed a img resize logic error that could cause no art to
		display if resize was on and resize failed
  	- Added Albums of the Moment to the Front page and removed the
		stats information
  	- Moved Popular/Recent to /stats.php and made Browse by Song the
		default browse action
  	- Fixed missing clean of Genre stats information and a logic
		flaw with order of clean functions in the catalog clean 